# flowreg-session-ui

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-release.yml  test.yml
src/pyflowreg_session_gui/: app.py  config_form.py  config_tab.py  main_window.py  message_dialogs.py  remote_browser_dialog.py  remote_runner.py  run_local_tab.py  run_remote_tab.py  state.py
tests/: test_config_io_roundtrip.py  test_form_smoke.py  test_path_mapping.py  test_remote_listing.py  test_sbatch_generation.py
