[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflowreg-session-gui"
version = "0.1.0"
description = "PySide6 desktop GUI for configuring and running PyFlowReg session mode locally or on Slurm HPC clusters"
readme = "README.md"
authors = [
  { name = "Philipp Flotho" }
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Processing"
]
dependencies = [
  "PySide6",
  "pyflowreg",
  "pyyaml",
  "tomli; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff"
]

[project.scripts]
pyflowreg-session-gui = "pyflowreg_session_gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
